--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -77,19 +77,19 @@
                                                 <td class="wrap-class">Heren BEL/prov (13u)</td>
                                                 <td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
-                                                <td class="wrap-class"><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Heren+BEL/prov+(13u)">Schrijf in!</a></td>
+                                                <td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Heren+BEL/prov+(13u)">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
                                                 <td class="wrap-class">Dames BEL/prov (13u)</td>
                                                 <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
-                                                <td class="wrap-class"><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Dames+BEL/prov+(13u)">Schrijf in!</a></td>
+                                                <td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Dames+BEL/prov+(13u)">Schrijf in!</a></td>
                                             </tr>
                                             <tr>
                                                 <td class="wrap-class">Gemengd Recreatief (10u)</td>
                                                 <td class="hide-mobile">Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
                                                 <td class="wrap-class">35 EUR</td>
-                                                <td class="wrap-class"><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Gemengd+Recreatief+(10u)">Schrijf in!</a></td>
+                                                <td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Gemengd+Recreatief+(10u)">Schrijf in!</a></td>
                                             </tr>
                                         </tbody>
                                     </table>
