--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -87,7 +87,7 @@
                                             </tr>
                                             <tr>
                                                 <td class="wrap-class">Gemengd Recreatief (10u)</td>
-                                                <td class="hide-mobile">Alles mag in deze reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
+                                                <td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal lovers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
                                                 <td class="wrap-class">35 EUR</td>
                                                 <td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Gemengd+Recreatief+(10u)">Schrijf in!</a></td>
                                             </tr>
