--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -53,7 +53,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="13-oktober.html">
 										<h2>13 oktober</h2>
