--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>10 november</h2>
@@ -95,7 +95,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>24 november</h2>
@@ -109,7 +109,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>8 december</h2>
@@ -123,7 +123,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>22 december</h2>
@@ -137,7 +137,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>12 januari</h2>
@@ -151,7 +151,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>26 januari</h2>
@@ -165,7 +165,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>9 februari</h2>
@@ -179,7 +179,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>23 februari</h2>
@@ -193,7 +193,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>8 maart</h2>
@@ -207,7 +207,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>22 maart</h2>
