--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -36,9 +36,7 @@
 						<ul>
 							<li><a href="index.html">Toernooien</a></li>
 							<li><a href="generic.html">Ranking 2019 - 2020</a></li>
-							<li><a href="generic.html">Over BWB</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Over Belgium Winter Beachvolley</a></li>
 						</ul>
 					</nav>
 
@@ -48,7 +46,7 @@
 							<header>
 								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor beachvolley freaks van Belgisch, provinciaal en recreatief niveau.</h1>
 								<p>Verspreid over 2 unieke indoor beachvolleybal accomocaties in België organiseren we elke 2de en 4de zondag van de maand een <strong>Heren BEL/prov</strong>, een <strong>Dames BEL/prov</strong> en een <strong>Gemengd Recreatief</strong> toernooi. 
-									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks <strong>zeker 3 volledige wedstrijden</strong> die perfect aansluiten bij het niveau dat je aangeeft. Klinkt tof? Kies je toernooi(en) en <strong>Schrijf je nu in!</strong></p>
+									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks genoeg wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Klinkt tof? Kies je toernooi(en) en <strong>schrijf je nu in!</strong></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -227,35 +225,15 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Vragen? Shoot!</h2>
-								<form action="mailto:jeroensannen@hotmail.com" method="post" enctype="text/plain">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
+								<h2>Contacteer ons</h2>
+								<p>0472 97 05 83 (Jeroen)<br>(Tim)</p>
 							</section>
 							<section>
-								<h2>Follow</h2>
+								<h2>Volg ons</h2>
 								<ul class="icons">
 									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
