--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -35,8 +35,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Toernooien</a></li>
-							<li><a href="generic.html">Ranking 2019 - 2020</a></li>
-							<li><a href="generic.html">Over Belgium Winter Beachvolley</a></li>
+							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
 						</ul>
 					</nav>
 
