--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -57,9 +57,9 @@
 										<h2>13 oktober</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-											10u Gemengd Recreatief<br>
-											13u Dames BEL/prov<br>
-											13u Heren BEL/prov</p>
+											Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -67,7 +67,7 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="27-oktober.html">
 										<h2>27 oktober</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
@@ -226,7 +226,13 @@
 						<div class="inner">
 							<section>
 								<h2>Contacteer ons</h2>
-								<p>0472 97 05 83 (Jeroen)<br>(Tim)</p>
+								<div class="row">
+										<div class="col-6 col-12-medium">
+								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+								</div>
+								<div class="col-6 col-12-medium">
+								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+								</div>
 							</section>
 							<section>
 								<h2>Volg ons</h2>
