--- a/indoorbeach/27-oktober.html
+++ b/indoorbeach/27-oktober.html
@@ -56,8 +56,8 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Zondag 13 oktober</h1>
-							<span class="image main"><img src="images/bigpic-sch.png" alt="" /></span>
-							<p>Zondag 13 oktober spelen we in <a target="_blank" href="https://goo.gl/maps/39negfTJZFMnzKGj8">Outdoorcentrum Schaffen</a>.</p>
+							<span class="image main"><img src="images/bigpic-pol.png" alt="" /></span>
+							<p>Zondag 27 oktober spelen we in <a target="_blank" href="https://goo.gl/maps/BM2YAxodAW9xfUcx9">TC De Pollepel</a>.</p>
 							<section>
                                 <h2>Inschrijven</h2>
                                 <div class="table-wrapper">
