--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -101,7 +101,13 @@
 						<div class="inner">
 							<section>
 								<h2>Contacteer ons</h2>
-								<p>0472 97 05 83 (Jeroen)<br>0496 20 01 04 (Tim)</p>
+								<div class="row">
+										<div class="col-6 col-12-medium">
+								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+								</div>
+								<div class="col-6 col-12-medium">
+								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+								</div>
 							</section>
 							<section>
 								<h2>Volg ons</h2>
