--- a/indoorbeach/about.html
+++ b/indoorbeach/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Over Belgium Winter Beachvolley</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +21,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+                            <a href="index.html" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Belgium Winter Beachvolley 2019 - 2020</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,14 +36,12 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+                <nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">Toernooien</a></li>
+							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
 						</ul>
 					</nav>
 
@@ -57,42 +55,28 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+                <footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
+								<h2>Contacteer ons</h2>
+								<div class="row">
+										<div class="col-6 col-12-medium">
+								<p><strong>Jeroen Sannen</strong><br><a target="_blank" href="http://m.me/jeroen.sannen">Facebook</a> of <a target="_blank" href="https://wa.me/32472970583">WhatsApp</a><br>+32 472 97 05 83</p>
+								</div>
+								<div class="col-6 col-12-medium">
+								<p><strong>Tim Kermans</strong><br><a target="_blank" href="http://m.me/tim.kermans">Facebook</a> of <a target="_blank" href="https://wa.me/32496200104">WhatsApp</a><br>+32 496 20 01 04</p>
+								</div>
 							</section>
 							<section>
-								<h2>Follow</h2>
+								<h2>Volg ons</h2>
 								<ul class="icons">
 									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Belgium Winter Beachvolley</li><li>Made by <a href="http://jeroensannen.be">JS</a></li>
 							</ul>
 						</div>
 					</footer>
