--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -43,10 +43,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<span class="image main"><img src="images/banner.png" alt="" /></span>
 							<header>
-								<h1>Belgium Winter Beachvolley is een volwaardige indoor beachvolleybal competitie voor beachvolley freaks van Belgisch, provinciaal en recreatief niveau.</h1>
-								<p>Verspreid over 2 unieke indoor beachvolleybal accomocaties in België organiseren we elke 2de en 4de zondag van de maand een <strong>Heren BEL/prov</strong>, een <strong>Dames BEL/prov</strong> en een <strong>Gemengd Recreatief</strong> toernooi. 
-									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks genoeg wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Klinkt tof? Kies je toernooi(en) en <strong>schrijf je nu in!</strong></p>
+								<h1>Belgium Winter Beachvolley is de eerste volwaardige indoor beachvolleybal competitie met 3 verschillende reeksen per dag voor beachvolley liefhebbers van Belgisch, provinciaal of recreatief niveau.</h1>
+								<p>Wat? Beachvolleybal is toch enkel iets voor in de zomer? No way, hosay! Dit splinternieuwe concept <strong>brengt de zomer naar je toe</strong> tijdens die druilerige Belgische winterdagen! Verspreid over <strong>2 unieke indoor beachvolleybal accomocaties</strong> in België organiseren we <strong>elke 2de en 4de zondag van de maand</strong> 3 reeksen per toernooidag: Een <strong>Heren Belgisch/provinciaal</strong>, een <strong>Dames Belgisch/provinciaal</strong> en een <strong>Gemengd Recreatief</strong> reeks. 
+									Voor een <strong>erg scherpe prijs</strong> speel je in elke reeks genoeg wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Klinkt tof? Klik op een toernooi en <strong>schrijf je in</strong>! Nog niet overtuigd? <a href="about.html">Meer informatie</a> over dit geweldige concept.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -71,9 +72,9 @@
 										<h2>27 oktober</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-											10u Gemengd Recreatief<br>
-											13u Dames BEL/prov<br>
-											13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+												Dames BEL/prov (14u - 20u)<br>
+												Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -81,13 +82,13 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="10-november.html">
 										<h2>10 november</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -95,13 +96,13 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="24-november.html">
 										<h2>24 november</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -109,13 +110,13 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="8-december.html">
 										<h2>8 december</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -123,13 +124,13 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="22-december.html">
 										<h2>22 december</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -137,13 +138,13 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="12-januari.html">
 										<h2>12 januari</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -151,13 +152,13 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="26-januari.html">
 										<h2>26 januari</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -165,13 +166,13 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="9-februari.html">
 										<h2>9 februari</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -179,13 +180,13 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="23-februari.html">
 										<h2>23 februari</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -193,13 +194,13 @@
 									<span class="image">
 										<img src="images/pic01.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="8-maart.html">
 										<h2>8 maart</h2>
 										<div class="content">
 											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
@@ -207,13 +208,13 @@
 									<span class="image">
 										<img src="images/pic02.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="22-maart.html">
 										<h2>22 maart</h2>
 										<div class="content">
 											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
-												10u Gemengd Recreatief<br>
-												13u Dames BEL/prov<br>
-												13u Heren BEL/prov</p>
+												Gemengd Recreatief (10u - 14u)<br>
+											Dames BEL/prov (14u - 20u)<br>
+											Heren BEL/prov (14u - 20u)</p>
 										</div>
 									</a>
 								</article>
