--- a/indoorbeach/about.html
+++ b/indoorbeach/about.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Over Belgium Winter Beachvolley</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/banner.png" alt="" /></span>
 							<p>Beetje zever over waar we voor staan en hoe we ontstaan zijn</p>
 						</div>
 					</div>
