--- a/indoorbeach/ranking2019-2020.html
+++ b/indoorbeach/ranking2019-2020.html
@@ -48,9 +48,87 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Ranking 2019 - 2020</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Hier kan je de algemene ranking terugvinden over alle verzamelde toernooien van het Belgium Winter Beachvolley</p>
+							<h1>Algemene ranking 2019 - 2020</h1>
+                            <span class="image main"><img src="images/banner.png" alt="" /></span>
+                            <p>Hier kan je de algemene ranking terugvinden over alle verzamelde toernooien van het Belgium Winter Beachvolley</p>
+                            <h2>Dames Belgisch/provinciaal</h2>
+                            <div class="table-wrapper">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>Plaats</th>
+                                                <th>Speler</th>
+                                                <th>Punten</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>100</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>80</td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>60</td>
+                                            </tr>
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>40</td>
+                                            </tr>
+                                            <tr>
+                                                <td>5</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>20</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            <h2>Heren Belgisch/provinciaal</h2>
+                            <div class="table-wrapper">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>Plaats</th>
+                                                <th>Speler</th>
+                                                <th>Punten</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>100</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>80</td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>60</td>
+                                            </tr>
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>40</td>
+                                            </tr>
+                                            <tr>
+                                                <td>5</td>
+                                                <td>Joske Vermeulen</td>
+                                                <td>20</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
 						</div>
 					</div>
 
