--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -57,9 +57,14 @@
 						<div class="inner">
 							<h1>Zondag 13 oktober</h1>
 							<span class="image main"><img src="images/bigpic-sch.png" alt="" /></span>
-							<p>Zondag 13 oktober spelen we in <a target="_blank" href="https://goo.gl/maps/39negfTJZFMnzKGj8">Outdoorcentrum Schaffen</a>.</p>
 							<section>
-                                <h2>Inschrijven</h2>
+								<h2>Adres</h2>
+								<p>Zelemseweg 124, 3290 Diest.</p>
+								<p>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.5116020572355!2d5.079425615960911!3d50.98821755635023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c138d3cac6b62f%3A0xcfc320d592cb0578!2sOutdoorcentrum%20Schaffen!5e0!3m2!1snl!2sbe!4v1568201548589!5m2!1snl!2sbe" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+								</p>
+								<h2>Inschrijven</h2>
+								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u.</p>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -67,7 +72,6 @@
                                                 <th>Reeks</th>
                                                 <th class="hide-mobile">Beschrijving</th>
                                                 <th>Prijs</th>
-                                                <th>Inschrijven</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -75,23 +79,28 @@
 												<td class="wrap-class">Gemengd Recreatief (10u - 14u)</td>
 												<td class="hide-mobile">Alles mag in deze 2 vs 2 reeks zonder "strikte" beachvolleybal regels. Voor mensen die graag spelen voor de fun. Mannen, vrouwen, beachvolleybal liefhebbers, maakt niet uit in welke combinatie. Veel wedstrijden spelen voor weinig geld en de winnaar krijgt een kleine prijs!</td>
 												<td class="wrap-class">35 EUR</td>
-												<td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Gemengd+Recreatief+(10u+-+14u)">Schrijf in!</a></td>
 											</tr>
                                             <tr>
                                                 <td class="wrap-class">Dames BEL/prov (14u - 20u)</td>
                                                 <td class="hide-mobile">Een stevige competitieve dames reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
                                                 <td class="wrap-class">35 EUR</td>
-                                                <td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Dames+BEL/prov+(14u+-+20u)">Schrijf in!</a></td>
 											</tr>
 											<tr>
 												<td class="wrap-class">Heren BEL/prov (14u - 20u)</td>
 												<td class="hide-mobile">Een stevige competitieve heren reeks voor spelers van Belgisch niveau en waaghalzen van divisie of provinciaal niveau. Je speelt veel wedstrijden, je kan een gratis deelname winnen voor het volgende toernooi en je kan punten verdienen voor de eindrangschikking van seizoen 2019 - 2020.</td>
 												<td class="wrap-class">35 EUR</td>
-												<td class="wrap-class"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=pp_url&entry.2079484525=Heren+BEL/prov+(14u+-+20u)">Schrijf in!</a></td>
 											</tr>
                                         </tbody>
                                     </table>
-                                </div>
+								</div>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a></p>
+								<h2>Deelnemers</h2>
+								<p>Je hebt ingeschreven en betaald maar je naam staat hier niet tussen? Geen paniek, we zetten je er zo snel mogelijk bij!</p>
+								<h2>Wedstrijdschemas</h2>
+								<p>We publiceren wedstrijdschemas voor alle reeksen hier ten laatste zaterdag 12 oktober voor 12:00u.</p>
+								<h2>Resultaten</h2>
+								<p>Na afloop van het toernooi publiceren we hier de resultaten voor alle reeksen.</p>
+								<p></p>
                             </section>
 						</div>
 					</div>
