--- a/indoorbeach/about.html
+++ b/indoorbeach/about.html
@@ -49,8 +49,8 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Over Belgium Winter Beachvolley</h1>
-							<span class="image main"><img src="images/banner.png" alt="" /></span>
-							<p>Beetje zever over waar we voor staan en hoe we ontstaan zijn</p>
+							<span class="image main"><img src="images/banner-funny.png" alt="" /></span>
+							<p>Beetje zever over waar we voor staan en hoe we ontstaan zijn. Eventueel er bij vermelden dat we 2 keer per week trainen verspreid over 2 hallen.</p>
 						</div>
 					</div>
 
