--- a/indoorbeach/ranking2019-2020.html
+++ b/indoorbeach/ranking2019-2020.html
@@ -50,7 +50,7 @@
 						<div class="inner">
 							<h1>Algemene ranking 2019 - 2020</h1>
                             <span class="image main"><img src="images/banner.png" alt="" /></span>
-                            <p>Hier kan je de algemene ranking terugvinden over alle verzamelde toernooien van het Belgium Winter Beachvolley</p>
+                            <p>Hier kan je de algemene ranking terugvinden over alle verzamelde toernooien van het Belgium Winter Beachvolley.</p>
                             <h2>Dames Belgisch/provinciaal</h2>
                             <div class="table-wrapper">
                                     <table>
@@ -64,7 +64,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>1</td>
-                                                <td>Joske Vermeulen</td>
+                                                <td>Joske Vermeulen <sup><a href="13-oktober.html">13/10</a>, <a href="27-oktober.html">27/10</a></sup></td>
                                                 <td>100</td>
                                             </tr>
                                             <tr>
