--- a/indoorbeach/13-oktober.html
+++ b/indoorbeach/13-oktober.html
@@ -58,13 +58,13 @@
 							<h1>Zondag 13 oktober</h1>
 							<span class="image main"><img src="images/bigpic-sch.png" alt="" /></span>
 							<section>
-								<h2>Adres</h2>
-								<p>Zelemseweg 124, 3290 Diest.</p>
+								<h2>Locatie</h2>
+								<p>Outdoorcentrum Schaffen. Zelemseweg 124, 3290 Diest.</p>
 								<p>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2511.5116020572355!2d5.079425615960911!3d50.98821755635023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c138d3cac6b62f%3A0xcfc320d592cb0578!2sOutdoorcentrum%20Schaffen!5e0!3m2!1snl!2sbe!4v1568201548589!5m2!1snl!2sbe" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 								</p>
 								<h2>Inschrijven</h2>
-								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u.</p>
+								<p>Inschrijven kan tot vrijdag middag 11 oktober, klokslag 12:00u. Schrijf je laat in? Breng zo snel mogelijk je betaling in orde: Niet betaald voor dat het toernooi begint is geen deelname. Ter plaatse betalen is niet mogelijk!</p>
                                 <div class="table-wrapper">
                                     <table>
                                         <thead>
@@ -93,7 +93,8 @@
                                         </tbody>
                                     </table>
 								</div>
-								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf_p8zn-IRj-9XccNzvlZpfRiHiJoJVVE85UXiEiy1GpCIz1w/viewform?usp=sf_link" class="button primary large">Inschrijven</a>
+								<br><a href="info.html">Meer informatie</a> over de inschrijving, locaties, reglementen, ...</p>
 								<h2>Deelnemers</h2>
 								<p>Je hebt ingeschreven en betaald maar je naam staat hier niet tussen? Geen paniek, we zetten je er zo snel mogelijk bij!</p>
 								<h2>Wedstrijdschemas</h2>
