--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -36,6 +36,7 @@
 						<ul>
 							<li><a href="index.html">Toernooien</a></li>
 							<li><a href="ranking2019-2020.html">Ranking 2019 - 2020</a></li>
+							<li><a href="info.html">Meer informatie</a></li>
 							<li><a href="about.html">Over Belgium Winter Beachvolley</a></li>
 						</ul>
 					</nav>
@@ -57,7 +58,7 @@
 									<a href="13-oktober.html">
 										<h2>13 oktober</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 											Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -71,7 +72,7 @@
 									<a href="27-oktober.html">
 										<h2>27 oktober</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 												Dames BEL/prov (14u - 20u)<br>
 												Heren BEL/prov (14u - 20u)</p>
@@ -85,7 +86,7 @@
 									<a href="10-november.html">
 										<h2>10 november</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -99,7 +100,7 @@
 									<a href="24-november.html">
 										<h2>24 november</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -113,7 +114,7 @@
 									<a href="8-december.html">
 										<h2>8 december</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -127,7 +128,7 @@
 									<a href="22-december.html">
 										<h2>22 december</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -141,7 +142,7 @@
 									<a href="12-januari.html">
 										<h2>12 januari</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -155,7 +156,7 @@
 									<a href="26-januari.html">
 										<h2>26 januari</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -169,7 +170,7 @@
 									<a href="9-februari.html">
 										<h2>9 februari</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -183,7 +184,7 @@
 									<a href="23-februari.html">
 										<h2>23 februari</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -197,7 +198,7 @@
 									<a href="8-maart.html">
 										<h2>8 maart</h2>
 										<div class="content">
-											<p><strong>Outdoorcentrum Schaffen<br>Zelemseweg 124, 3290 Diest</strong><br>
+											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
@@ -211,7 +212,7 @@
 									<a href="22-maart.html">
 										<h2>22 maart</h2>
 										<div class="content">
-											<p><strong>TC De Pollepel<br>Naalstraat 43C, 2570 Duffel</strong><br>
+											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
 											Heren BEL/prov (14u - 20u)</p>
