--- a/indoorbeach/index.html
+++ b/indoorbeach/index.html
@@ -48,7 +48,7 @@
 								<h1>Belgium Winter Beachvolley is de eerste volwaardige indoor beachvolleybal competitie met 3 verschillende reeksen per dag voor beachvolley liefhebbers van Belgisch, provinciaal of recreatief niveau.</h1>
 								<span class="image main"><img src="images/banner.png" alt="" /></span>
 								<p>Wat? Beachvolleybal is toch enkel iets voor in de zomer? No way, hosay! Dit splinternieuwe concept <strong>brengt de zomer naar je toe</strong> tijdens die druilerige Belgische winterdagen! Verspreid over <strong>2 unieke indoor beachvolleybal accomocaties</strong> in België organiseren we <strong>elke 2de en 4de zondag van de maand</strong> 3 reeksen per toernooidag: Een <strong>Heren Belgisch/provinciaal</strong>, een <strong>Dames Belgisch/provinciaal</strong> en een <strong>Gemengd Recreatief</strong> reeks. 
-									Voor een <strong>erg scherpe prijs</strong> speel je in een goed verlichte, verwarmde hal met aangename douches. Je speelt voldoende wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Even enthousiast als ons? Klik op een toernooi en <strong>schrijf je nu in</strong>! Nog niet overtuigd? <a href="about.html">Meer informatie over dit geweldige concept</a>.</p>
+									Voor een <strong>erg scherpe prijs</strong> speel je in een goed verlichte, verwarmde hal met aangename douches. Je speelt voldoende wedstrijden die perfect aansluiten bij het niveau dat je aangeeft. Even enthousiast als ons? Klik op een toernooi en <strong>schrijf je nu in</strong>! Nog niet overtuigd? <a href="info.html">Meer informatie over dit geweldige concept</a>.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -61,7 +61,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 											Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)<br>
+											<sub>Inschrijven kan tot 11 oktober 12:00u</sub></p>
 										</div>
 									</a>
 								</article>
@@ -75,7 +76,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 												Dames BEL/prov (14u - 20u)<br>
-												Heren BEL/prov (14u - 20u)</p>
+												Heren BEL/prov (14u - 20u)
+												<br><sub>Inschrijven kan vanaf 27 september</sub></p>
 										</div>
 									</a>
 								</article>
@@ -89,7 +91,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 10 oktober</sub></p>
 										</div>
 									</a>
 								</article>
@@ -103,7 +106,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 24 oktober</sub></p>
 										</div>
 									</a>
 								</article>
@@ -117,7 +121,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 8 november</sub></p>
 										</div>
 									</a>
 								</article>
@@ -131,7 +136,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 22 november</sub></p>
 										</div>
 									</a>
 								</article>
@@ -145,7 +151,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 12 december</sub></p>
 										</div>
 									</a>
 								</article>
@@ -159,7 +166,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 26 december</sub></p>
 										</div>
 									</a>
 								</article>
@@ -173,7 +181,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 9 januari</sub></p>
 										</div>
 									</a>
 								</article>
@@ -187,7 +196,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 23 januari</sub></p>
 										</div>
 									</a>
 								</article>
@@ -201,7 +211,8 @@
 											<p><strong>Outdoorcentrum Schaffen</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 8 februari</sub></p>
 										</div>
 									</a>
 								</article>
@@ -215,7 +226,8 @@
 											<p><strong>TC De Pollepel</strong><br>
 												Gemengd Recreatief (10u - 14u)<br>
 											Dames BEL/prov (14u - 20u)<br>
-											Heren BEL/prov (14u - 20u)</p>
+											Heren BEL/prov (14u - 20u)
+											<br><sub>Inschrijven kan vanaf 22 februari</sub></p>
 										</div>
 									</a>
 								</article>
@@ -239,9 +251,9 @@
 							<section>
 								<h2>Volg ons</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/Belgiumindoorbeachvolley/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 								</ul>
 							</section>
 							<ul class="copyright">
