--- a/indoorbeach/info.html
+++ b/indoorbeach/info.html
@@ -65,12 +65,14 @@
                             <h2>Reglement Belgisch/provinciaal reeks</h2>
                             <ul>
                                 <li>We spelen met strikte beachvolleybalregels maar zonder scheidsrechter. We rekenen op de sportiviteit van onze deelnemers, bij discussie spelen we het punt opnieuw.</li>
-                                <li>De startranking (seeds) worden opgemaakt aan de hand van de punten behaald op andere toernooien.</li>
+                                <li>De startranking (seeds) wordt opgemaakt aan de hand van de punten behaald op andere toernooien.</li>
                                 <li>De dagwinnaars van deze reeksen ontvangen elk een bon die 17,5 EUR korting geeft op een deelname aan het eerstvolgende Belgium Winter Beachvolley toernooi (in dezelfde reeks)! Zo kan je samen gratis deelnemen aan het volgende toernooi. Of je partner kan heiligschennis plegen en een nieuw team vormen aan halve prijs wanneer je zelf niet kan, nice! Helaas zijn deze bonnen op naam en dus niet overdraagbaar aan andere mensen. Ook zijn ze enkel te gebruiken voor het eerstvolgende toernooi en niet de toernooien erna. Het specifieke toernooi en de reeks waarvoor je korting krijgt staat aangegeven op je bon.</li>
+                                <li>Wedstrijdschemas afhankelijk van inschrijvingen</li>
                             </ul>
                             <h2>Reglement Gemengd recreatief reeks</h2>
                             <ul>
                                 <li>We spelen zonder strikte beachvolleybalregels</li>
+                                <li>Wedstrijdschemas met maximale fun</li>
                             </ul>
                         </div>
 					</div>
